# blog-migrator-mcp

./: README.md  client.py  install.sh  pyproject.toml  schemas.py  server.py
tests/: test_platform_detection.py  test_schemas.py
tools/: __init__.py  discover.py  images.py  scrape.py
