[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog-migrator-mcp"
version = "0.1.0"
description = "MCP server for scraping and migrating blog posts"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0",
  "trafilatura>=2.0",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "pydantic>=2.0",
]

[project.scripts]
blog-migrator-mcp = "server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
